# UniCaSportBot

./: .gitignore  Cargo.toml  README.md  events.json  subs.json
.github/workflows/: release.yaml
src/: commands.rs  constants.rs  events.rs  main.rs  scraper.rs  storage.rs  subs.rs
