[package]
name = "unica_events"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
once_cell = "1.21.3"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
scraper = "0.18"